<resources>
    <string name="app_name">공부한조각</string>
    <string-array name="color_options">
        <item>#F24C4F</item>
        <item>#FF922C</item>
        <item>#FFF71D</item>
        <item>#1CD32B</item>
        <item>#20DEF0</item>
        <item>#415AFE</item>
        <item>#BD59FF</item>
    </string-array>
</resources>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subject_name">과목명</string>
    <string name="day">요일</string>
    <string name="time">시간</string>
    <string name="color">색상</string>
    <string name="save">완료</string>
    <string name="back">뒤로가기</string>
    <string name="add_subject_description">과목 추가</string>
    <string name="timetable_scroll_area">시간표 스크롤 영역</string>

    <string name="screen_calendar">Calendar</string>
    <string name="screen_timetable">시간표</string>

</resources>
